[package]
name = "event"
version = "0.8.0"
authors = ["Matthew Kozachek <mkozachek@gmail.com>"]
documentation = "https://mkozachek.github.io/Rust-Events/"
repository = "https://github.com/mkozachek/Rust-Events"
keywords = ["Events", "events", "event-driven",]
license = "Apache-2.0"

[lib]
name = "event"
path = "src/lib.rs"
crate-type = ["dylib"]

